[package]
name = "rust-socks5"
version = "0.1.0"
authors = ["conblem <mail@conblem.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
trust-dns-resolver = { version = "0.19.3", features = ["dns-over-rustls", "dnssec-ring"] }
trust-dns-proto = "0.19.3"
rustls = "0.17.0"
base64 = "0.12.0"
byteorder = "1.3.4"
ring = "0.16.11"
tls-parser = { version = "0.7.0", features = ["serialize"] }
async-trait = "0.1.25"
ttl_cache = "0.5.1"
cookie-factory = "0.3.1"
